--- a/index.html
+++ b/index.html
@@ -32,22 +32,37 @@
     <div class="container">
         <h2> <span class="d-arrow">&#9660;</span>  New task</h2>
         <ul>
-            <li><span class="done">&#10004;</span>Quarterry newsletter</li>
+            <li class="first-element"><span class="done">&#10004;</span>&ensp;	Quarterry newsletter 
+            <span class="flag-1"> Editoriale</span>
         </ul>
         <h2><span class="d-arrow">&#9660;</span> Today</h2>
         <ul>
-            <li><span class="done">&#10004;</span>Day</li>
-            <li><span class="not-done">&#10008;</span>Day</li>
-            <li><span class="done">&#10004;</span>Day</li>
-            <li><span class="done">&#10004;</span>Day</li>
+            <li  class="first-element"> <span class="done">&#10004;</span> &ensp;Day
+                <span class="flag-2"> Qi goal</span></li>
+            <li> <span class="not-done">&#10008;</span>&ensp;	 Day
+                <span class="flag-3"> Recruting</span></li></li>
+            <li> <span class="done">&#10004;</span>&ensp;	Day
+                <span class="flag-1"> Editoriale</span>
+            </li>
+            <li> <span class="done">&#10004;</span>&ensp;	Day
+                <span class="flag-3"> Recruting</span>
+            </li>
 
         </ul>
         <h2><span class="d-arrow">&#9660;</span> Upcoming</h2>
         <ul>
-            <li><span class="done">&#10004;</span>Page</li>
-            <li><span class="done">&#10004;</span>home</li>
-            <li><span class="not-done">&#10008;</span>Rreview</li>
-            <li><span class="done">&#10004;</span>footer</li>
+            <li class="first-element"><span class="done">&#10004;</span>&ensp;	Page
+                <span class="flag-2"> Qi goal</span>
+            </li>
+            <li><span class="done">&#10004;</span>&ensp;	home
+                <span class="flag-3"> Recruting</span>
+            </li>
+            <li><span class="not-done">&#10008;</span>&ensp;	Rreview
+                <span class="flag-1"> Editoriale</span>
+            </li>
+            <li><span class="done">&#10004;</span>&ensp;	footer
+                <span class="flag-1"> Editoriale</span>
+            </li>
         </ul>
 
     </div>
