--- a/index.html
+++ b/index.html
@@ -8,17 +8,9 @@
     <link rel="stylesheet" href="asset/style.css">
 </head>
 <body>
-    <header>
-
-        <div class="logo">
-            <img src="asset/img 2/logo.png" alt="">
-
-        </div>
-
-        <div class="title-page">
-            <h1>Toboolist</h1>
-        </div>
-
+    <header> 
+        <img class="logo" src="asset/img 2/logo.png" alt="">
+        <h1 class="title-page">Toboolist</h1>
 
     </header>
     <div class="nav-container">
